--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "virtualrusingreact",
+  "name": "virtualrusingreactfortest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.414.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
